--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 
 option(USE_FLATMAP "Use Boost flatmap instead of std::map" OFF)
-option(BUILD_BENCHMARKS "Build benchmarking tool" OFF)
+
 
 project(LibAlgebraUnitTests VERSION 1.0)
 
@@ -13,9 +13,11 @@ if (USE_FLATMAP)
 endif()
 
 
-if (BUILD_BENCHMARKS)
-    find_package(benchmark REQUIRED)
-endif()
+
+add_compile_definitions(DENSE_TRANSITION=2<<5)
+
+find_package(benchmark REQUIRED)
+
 
 include_directories(libalgebra)
 
@@ -24,15 +26,25 @@ file(GLOB SOURCES "LibAlgebraUnitTests/*.cpp")
 configure_file(libalgebra_unittests.h.in unittest_config.h)
 
 
+#add_executable(test "LibAlgebraUnitTests/LibAlgebraUnitTests.cpp" "LibAlgebraUnitTests/AlgebraFunctionsTests.cpp" "LibAlgebraUnitTests/memfile.cpp" "LibAlgebraUnitTests/makebm.cpp")
 add_executable(test ${SOURCES})
 target_include_directories(test PUBLIC "${PROJECT_BINARY_DIR}")
 target_link_libraries(test UnitTest++ gmp ${Boost_LIBRARIES} pthread)
+set_property(TARGET test PROPERTY CXX_STANDARD 11)
 
 
-if (BUILD_BENCHMARKS)
-    file(GLOB BENCH_SOURCES "benchmarks/*.cpp")
+file(GLOB BENCH_SOURCES "benchmarks/*.cpp")
 
-    add_executable(benchmarks ${BENCH_SOURCES})
-    target_include_directories(benchmarks PUBLIC "${PROJECT_BINARY_DIR}")
-    target_link_libraries(benchmarks benchmark::benchmark UnitTest++ gmp ${Boost_LIBRARIES} pthread)
-endif()
+add_executable(benchmarks ${BENCH_SOURCES})
+target_include_directories(benchmarks PUBLIC "${PROJECT_BINARY_DIR}")
+target_link_libraries(benchmarks benchmark::benchmark UnitTest++ gmp ${Boost_LIBRARIES} pthread)
+set_property(TARGET test PROPERTY CXX_STANDARD 11)
+
+
+
+file(GLOB SVD_SOURCES "svd/*.cpp")
+
+add_executable(time_vec_iteration "${SVD_SOURCES}")
+target_include_directories(time_vec_iteration PUBLIC "${PROJECT_BINARY_DIR}")
+target_link_libraries(time_vec_iteration benchmark::benchmark gmp ${Boost_LIBRARIES} pthread)
+set_property(TARGET test PROPERTY CXX_STANDARD 11)
