--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,16 +7,15 @@ project(LibAlgebraUnitTests VERSION 1.0)
 
 find_package(UnitTest++ REQUIRED)
 
-find_package(Boost COMPONENTS filesystem iostreams serialization REQUIRED)
+find_package(Boost COMPONENTS filesystem iostreams serialization
+        REQUIRED)
 
+#set(CMAKE_CXX_FLAGS "-g -p -pg -O3 ${CMAKE_CXX_FLAGS} -march=native")
 
-if (PROFILER)
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0 -g -pg")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -g -pg")
-endif()
+#set(CMAKE_C_FLAGS    "-g -p -pg -O3 -shared-libgcc")
+#set(CMAKE_CXX_FLAGS  "-g -p -pg -O3 -shared-libgcc" )
 
-#set(CMAKE_C_FLAGS  "-g -pg -O2 -shared-libgcc")
-#set(CMAKE_CXX_FLAGS  " -g -pg -O2 -shared-libgcc" )
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
 
 add_compile_definitions(DENSE_TRANSITION=2<<5)
 
@@ -25,7 +24,7 @@ find_package(benchmark REQUIRED)
 
 include_directories(libalgebra)
 
-file(GLOB SOURCES        "LibAlgebraUnitTests/*.cpp")
+file(GLOB SOURCES                "LibAlgebraUnitTests/*.cpp")
 
 configure_file(libalgebra_unittests.h.in unittest_config.h)
 
